fix alignment of pref next buttons

--- a/src/styling/carousel.scss
+++ b/src/styling/carousel.scss
@@ -20,7 +20,7 @@
 #buttonRight {
     /*     position: absolute; */
     width: 50%;
-    height: 104%;
+    height: calc(100% + 22px);
     background-color: rgba(0, 0, 0, 0);
     border: none;
     color: #939393;
@@ -31,6 +31,10 @@
 
     &:hover {
         color: black;
+    }
+
+    &::before {
+        color: #939393;
     }
 }
 
@@ -54,4 +58,5 @@
     top: 0;
     display: flex;
     flex-direction: row;
+    height: 76vh;
 }
